force-app/main/default/objects/DP_Log__c/DP_Log__c.object-meta.xml
<CustomObject>
    <label>DP Log</label>
    <nameField>
        <label>DP Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DP Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>