force-app/main/default/objects/DP_Log__c/fields/CDId__c.field-meta.xml
<CustomField>
    <fullName>CDId__c</fullName>
    <label>CDId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>