force-app/main/default/objects/DP_Log__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <length>10</length>
    <type>Text</type>
</CustomField>