force-app/main/default/objects/DP_Log__c/fields/Metadata_Name__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Name__c</fullName>
    <label>Metadata Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>