force-app/main/default/objects/DP_Log__c/fields/Static_Value__c.field-meta.xml
<CustomField>
    <fullName>Static_Value__c</fullName>
    <label>Static Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>