force-app/main/default/objects/DP_Log__c/fields/Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Template_Id__c</fullName>
    <label>Template Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>